<resources>
    <string name="app_name">BP Logs</string>

    <string name="dummy_sys">120</string>
    <string name="dummy_dia">80</string>
    <string name="dummy_rate">60</string>
    <string name="dummy_date">Jan 14, 1:30 PM</string>
    <string name="dummy_month">JAN</string>
    <string name="dummy_day">24</string>

    <string name="header_sys">SYSTOLIC</string>
    <string name="header_dia">DIASTOLIC</string>
    <string name="header_rate">HEART RATE</string>
    <string name="header_details">Details</string>
    <string name="header_results">Results</string>

    <string name="label_sys">Systolic</string>
    <string name="label_dia">Diastolic</string>
    <string name="label_rate">Heart Rate</string>
    <string name="label_notes">Notes</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_feeling">Feeling</string>
    <string name="label_position">Posture</string>
    <string name="label_arm">Arm Use</string>
    <string name="label_bloodpressure">Blood Pressure</string>
    <string name="label_button_changes">Save Changes</string>
    <string name="label_button_save">Save</string>

    <string name="prompt_title_delete">Delete Log</string>
    <string name="prompt_message_delete">Do you want to delete this log?</string>

    <string name="prompt_title_options">Options</string>
    <string name="prompt_message_options">What do you want to do</string>
    <string name="prompt_choice_delete">Delete</string>
    <string name="prompt_choice_edit">Edit</string>

    <string name="actionbar_title_add">Add Log</string>
    <string name="actionbar_title_edit">Edit Log</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>

    <string name="prompt_message_logdelete">Log deleted.</string>
    <string name="prompt_message_logadded">Log added.</string>
    <string name="prompt_message_logupdated">Log updated.</string>

    <string name="prompt_message_error_saving">Error saving. Please try again.</string>
    <string name="prompt_message_error_updating">Error updating. Please try again.</string>
    <string name="prompt_message_export_success">Successfully exported at BPLogs folder.</string>
    <string name="prompt_message_export_empty">Empty database. Please add entries.</string>
    <string name="prompt_message_export_error">Export failed. Please try again.</string>

    <string-array name="list_indicator">
        <item>High</item>
        <item>Pre-high</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>

    <string-array name="list_feelings">
        <item>😆 Excited</item>
        <item>😀 Happy</item>
        <item>☺️ Normal</item>
        <item>😟 Sad</item>
        <item>😡 Mad</item>
        <item>😟 Uncomfortable</item>
        <item>😫 Stressed</item>
    </string-array>

    <string-array name="list_position">
        <item>Seated</item>
        <item>Lying down</item>
        <item>Standing up</item>
    </string-array>

    <string-array name="list_arm">
        <item>Left arm</item>
        <item>Right arm</item>
        <item>Other</item>
    </string-array>

    <!--SETTINGS-->
    <string name="label_dialog_loading">Loading</string>
    <string name="label_setting_export">Export Data</string>
    <string name="label_setting_export_sub">Export data as a CSV file</string>

    <string name="label_setting_theme">Theme</string>
    <string name="label_setting_theme_sub">Set theme</string>
    <string name="prompt_message_request_storage">You cannot export the CSV.</string>

    <string name="title_about">About</string>
    <string name="prompt_message_about">
        BPLogs app is a personal project by Young Patola.\n\n
            Libraries used:\n
            - Butterknife by Jake Wharton\n
            - Joda Time by Joda.org\n
            - Other Android libraries
    </string>


    <!--PREFERENCE LIST: THEME ARRAYS-->
    <string-array name="list_pref_themes">
        <item>Light</item>
        <item>Gray (Low Contrast)</item>
        <item>Black</item>
    </string-array>

    <string-array name="list_pref_themes_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="list_pref_fontsize">
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
        <item>Larger</item>
    </string-array>

    <string-array name="list_pref_fontsize_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
